fix: view post text display and content editor text wrap

--- a/my-react-app/src/Components/ContentEditor/ContentEditor.css
+++ b/my-react-app/src/Components/ContentEditor/ContentEditor.css
@@ -76,7 +76,6 @@
     appearance: none;
     outline: none;
     word-break: break-word;
-    white-space: pre;
     flex: 1;
 }
 
